--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "sass": "^1.62.1",
-    "styled-components": "^5.3.10"
+    "styled-components": "^5.3.10",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
